--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>TanayaArtistPortfolio</title>
+  <title>Tanaya R Raj</title>
   <base href="/static/">
   <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
