--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,15 @@
 <style>*{padding:0rem;margin:0rem;background-color:#f8efe6;font-family:Oswald,sans-serif}</style><link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.css"></noscript></head>
 <body>
   <app-root></app-root>
+
+
+  <!-- Author of the website: Vikram Bhavsar -->
+  <!-- THis website is result of long and hardwork of two and half months.-->
+  <!-- Find my portfolio at: https://github.com/vikramBhavsar -->
+  <!-- Find my linkedin at: https://www.linkedin.com/in/vikram-bhavsar/ -->
+  <!--Hope you like this project. I certainly did enjoy working on this. Feel free to get in touch with me for projects such as these -->
+
+
 <script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="main.js" type="module"></script>
 
 </body></html>
