--- a/clientApp/src/index.html
+++ b/clientApp/src/index.html
@@ -28,5 +28,14 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+  <!-- Author of the website: Vikram Bhavsar -->
+  <!-- THis website is result of long and hardwork of two and half months.-->
+  <!-- Find my portfolio at: https://github.com/vikramBhavsar -->
+  <!-- Find my linkedin at: https://www.linkedin.com/in/vikram-bhavsar/ -->
+  <!--Hope you like this project. I certainly did enjoy working on this. Feel free to get in touch with me for projects such as these -->
+
+
 </body>
 </html>
